RESOLVED FIXED89393
RenderLayer subtrees without any self-painting layer shouldn't be walked during hit testing
https://bugs.webkit.org/show_bug.cgi?id=89393
Summary RenderLayer subtrees without any self-painting layer shouldn't be walked duri...
Julien Chaffraix
Reported 2012-06-18 15:30:38 PDT
Bug 88888 added an optimization to avoid walking such subtrees during painting but it didn't patch the hit testing path. On http://dglazkov.github.com/performance-tests/biggrid.html, hit testing is suffering from the same over-head as painting: merely traversing a lot of non-self-painting-layers is proving costly. This means hit testing would benefit from the same optimization.
Attachments
Proposed performance change 1. (4.02 KB, patch)
2012-06-18 15:51 PDT, Julien Chaffraix
no flags
Patch for landing (4.06 KB, patch)
2012-10-17 15:43 PDT, Julien Chaffraix
no flags
Julien Chaffraix
Comment 1 2012-06-18 15:51:02 PDT
Created attachment 148191 [details] Proposed performance change 1.
Eric Seidel (no email)
Comment 2 2012-10-17 13:24:53 PDT
Comment on attachment 148191 [details] Proposed performance change 1. Looks reasonable.
Julien Chaffraix
Comment 3 2012-10-17 15:30:01 PDT
Thanks Eric, this optimization is still valid and would be superseded by bug 89899. I don't have much time to investigate the other bug so let's just land this in the meantime.
Julien Chaffraix
Comment 4 2012-10-17 15:43:48 PDT
Created attachment 169280 [details] Patch for landing
WebKit Review Bot
Comment 5 2012-10-17 16:33:55 PDT
Comment on attachment 169280 [details] Patch for landing Clearing flags on attachment: 169280 Committed r131665: <http://trac.webkit.org/changeset/131665>
WebKit Review Bot
Comment 6 2012-10-17 16:33:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.